network/envoy/auth-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-routes
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    namespace: network
    sectionName: https
  hostnames:
  - "cd.${INFRA_DOMAIN}"
  - "longhorn.${INFRA_DOMAIN}"
  - "cwa.${INFRA_DOMAIN}"
  - "hometube.${INFRA_DOMAIN}"
  - "jellyfin.${INFRA_DOMAIN}"
  - "yubal.${INFRA_DOMAIN}"
  - "grafana.${INFRA_DOMAIN}"
  - "prometheus.${INFRA_DOMAIN}"
  - "hubble.${INFRA_DOMAIN}"
  - "jackett.${INFRA_DOMAIN}"
  - "qb.${INFRA_DOMAIN}"
  - "slskd.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: oauth2-proxy
      namespace: sec
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /oauth2
