network/envoy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-envoy-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-cluster-gateway
    namespace: network
    sectionName: http
  hostnames:
  - "hubble.envoy.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: hubble-ui
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
