network/envoy/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: security-policy
  namespace: network
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    sectionName: https
  extAuth:
    headersToExtAuth:
    - Cookie
    - X-Auth-Request-Redirect
    http:
      backendRefs:
      - group: ""
        kind: Service
        name: oauth2-proxy
        namespace: sec
        port: 80
        weight: 1
      path: /oauth2/auth
      headersToBackend:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Roles
